test/files/neg/macro-invalidusage-badbounds/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo[U <: String](c: Ctx) = { import c.universe._; c.Expr[Unit](Literal(Constant(()))) }
}
